--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   <!-- Compiled and minified JavaScript -->
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   </body>
